			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04a: *********************************

IMP: (09/30/05, SMR) Schematic DRC no longer checks for overlap of graphics.

IMP: (09/30/05, SMR) "Layers" preferences panel has intelligent "outline" checkboxes.

BUG: (09/30/05, SMR) Crossprobing from the schematics to the waveform window takes too long (Bug #583).
FIX: Use hash tables to optimize name lookup.

IMP: (09/29/05, SMR) Added keyboard shortcut listing in manual.

IMP: (09/29/05, SMR) Added manual entry for schematic DRC.

IMP: (09/29/05, SMR) Added section in "Layout Tutorial" of manual that explains
     how to connect a contact to a transistor.

BUG: (09/30/05, GVG) Solid colors in ColorsTab are not updated because the information
relies on values found in LayersTab (Bug #589).
FIX: Make layerMap in LayersTab a singleton.

BUG: (09/30/05, DN) Cleanup Cell/Shorten Selected Arc, does opposite (Bug #587).
FIX: In CircuitChanges.ShortenArcs.doIt use ArcInst.HEADEND and ArcInst.TAILEND instead of 0 and 1.

BUG: (09/26/05, DN) Deleting arcs is too slow (Bug #547)
FIX: Comment check of Connections in Cell.check().

BUG: (09/29/05, DN) Schematic VDD Symbol misleading (Bug #586)
FIX: In technologies.Schematics change "pwr" to "vdd" and add item to "converOldPortName".

BUG: (09/29/05, GVG) Sizes of poly arcs change depending on order libraries are read in (Bug #576).
FIX: Add ResetDefaultWidthJob(lib) every time a library is read because it can't rely on
the reconcilation dialog. As side effect, only gate arcs parallel to the transistors will
be resized.

BUG: (09/28/05, SMR) Text is always black: does not show up on black background.
FIX: In "PixelDrawing.drawText()", initialize color to proper default.

BUG: (09/28/05, SMR) Printing does not work.
FIX: In "FileMenu.printCommand()", must call "getOutputPreferences()" all the time,